tripadvisor paid widget fix
css added for removing opacity curtain in front of review if the widget run out of views.

--- a/css/style.css
+++ b/css/style.css
@@ -903,3 +903,7 @@ input[type="radio"] {
   top: 1px;
   position: relative;
 }
+
+.eatr-reviews-skeleton-container > a {
+    display: none !important;
+}
